@@ -1,4 +1,7 @@
 Next Release
+  - Fixed a bug where opening the HTTP servers would fail silently
+    for socket errors other than errno.EADDRINUSE.
+
   - Configuration options for logfiles now accept mixed case reserved 
     words (e.g. "AUTO" or "auto") for consistency with other options.
 
